...
      body: CustomScrollView(
        slivers: [
          SliverToBoxAdapter(
            child: Padding(
              padding: const EdgeInsets.fromLTRB(16, 16, 16, 8),
              child: Text(
                '推荐歌曲',
                style: Theme.of(context).textTheme.headlineSmall,
              ),
            ),
          ),
          Obx(
            () => controller.recommendSongList.isEmpty
...
                  ),
          ),
          SliverToBoxAdapter(
            child: Padding(
              padding: const EdgeInsets.fromLTRB(16, 16, 16, 8),
              child: Text(
                '推荐歌单',
                style: Theme.of(context).textTheme.headlineSmall,
              ),
            ),
          ),
          Obx(
            () => controller.recommendPlayList.isEmpty
...
